--- a/index.html
+++ b/index.html
@@ -12,74 +12,10 @@
 	<div id="header">
 		<ul id="nav">
 			<li>
-				<form id="search-form">
-					<span class="algolia-autocomplete" style="position: relative; display: inline-block; direction: ltr;">
-						<input type="text" id="search-query-nav" class="search-query st-default-search-input aa-input" autocomplete="off" spellcheck="false" role="combobox" aria-autocomplete="list" aria-expanded="false" aria-owns="algolia-autocomplete-listbox-0" dir="auto" style="position: relative; vertical-align: top;">
-						<pre aria-hidden="true" style="position: absolute; visibility: hidden; white-space: pre; font-family: Arial; font-size: 13.3333px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: normal; word-spacing: 0px; letter-spacing: normal; text-indent: 0px; text-rendering: auto; text-transform: none;"></pre>
-						<span class="aa-dropdown-menu" role="listbox" id="algolia-autocomplete-listbox-0" style="position: absolute; top: 100%; z-index: 100; left: 0px; right: auto; display: none;">
-							<div class="aa-dataset-1"></div>
-						</span>
-					</span>
-				</form>
+				<a class="nav-link" href="/">主页</a>
 			</li>
 			<li>
-				<a class="nav-link" href="">主页</a>
-			</li>
-			<li class="nav-dropdown-container">
-				<a class="nav-link">代码库</a>
-				<span class="arrow"></span>
-				<ul class="nav-dropdown">
-					<li>
-						<h4>游戏</h4>
-					</li>
-					<li>
-						<ul>
-							<li>
-								<a href="" class="nav-link" target="_blank">论坛</a>
-							</li>
-						</ul>
-					</li>
-					<li>
-						<h4>工具</h4>
-					</li>
-					<li>
-						<ul>
-							<li>
-								<a href="" class="nav-link" target="_blank">Devtools</a>
-							</li>
-						</ul>
-					</li>
-					<li>
-						<h4>UI组件</h4>
-					</li>
-					<li>
-						<ul>
-							<li>
-								<a href="" class="nav-link" target="_blank">Vue Router</a>
-							</li>
-						</ul>
-					</li>
-					<li>
-						<h4>非UI组件</h4>
-					</li>
-					<li>
-						<ul>
-							<li>
-								<a href="" class="nav-link" target="_blank">Roadmap</a>
-							</li>
-						</ul>
-					</li>
-					<li>
-						<h4>资源列表</h4>
-					</li>
-					<li>
-						<ul>
-							<li>
-								<a href="" class="nav-link" target="_blank">官方仓库</a>
-							</li>
-						</ul>
-					</li>
-				</ul>
+				<a class="nav-link" href="/fe-menu">fe-menu</a>
 			</li>
 		</ul>
 	</div>
@@ -161,7 +97,6 @@
 				var el = this.$el;
 				var ex = el.clientWidth /2
 				var ey = el.clientHeight /2
-				console.log(el.localName)
 				var sjxy = {
 					x: x- ex,
 					y: y- ey
@@ -210,19 +145,28 @@
 			},
 			msg:'石头WEB',
 			cardList:[{
-				title:'贪吃蛇',
+				title:'react',
 				image:'/images/background1.jpg',
-				url:'/code/a/'
+				url:'/react/'
+			},
+			// {
+			// 	title:'vue',
+			// 	image:'/images/background1.jpg',
+			// 	url:'/vue/'
+			// },
+			// {
+			// 	title:'angular',
+			// 	image:'/images/background1.jpg',
+			// 	url:'/angular/'
+			// },
+			{
+				title:'fe-menu',
+				image:'/images/background1.jpg',
+				url:'/fe-menu/'
 			},{
-				title:'这是一个标题'
-			},{
-				title:'这是一个标题'
-			},{
-				title:'这是一个标题'
-			},{
-				title:'这是一个标题'
-			},{
-				title:'这是一个标题'
+				title:'轻划水面',
+				image:'/images/background1.jpg',
+				url: '/code/waterClick'
 			},{
 				title:'这是一个标题'
 			}]
