--- a/client/fe-menu/index.html
+++ b/client/fe-menu/index.html
@@ -8,6 +8,5 @@
   </head>
   <body>
     <div id="App"></div>
-    <script type="text/javascript" src="/fe-menu/main.bundle.js"></script>
-  </body>
+  <script type="text/javascript" src="/fe-menu/main.bundle.js"></script></body>
 </html>
